# jvl

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  conductor.json  config.schema.json  hk.pkl  jvl.json  mise.toml
.helix/: languages.toml
benchmark/: mise.toml  package.json  pnpm-lock.yaml  results-all.md  results-biome.md  results-dprint.md  results-oxlint.md  results-package.md  results-tsconfig.md  run.sh
mise-tasks/: pkl-format
src/: diagnostic.rs  discover.rs  lib.rs  lsp.rs  main.rs  output.rs  parse.rs  schema.rs  validate.rs
tests/: exit_codes.rs  file_discovery.rs  human_output.rs  json_output.rs  lsp_completion.rs  lsp_debounce.rs  lsp_diagnostics.rs  lsp_encoding.rs  lsp_hover.rs  lsp_lifecycle.rs  lsp_watch.rs  schema_mapping.rs
todos/: 001-pending-p1-canonicalize-lsp-project-root.md  001-pending-p2-schema-cache-evict.md  001-resolved-p1-utf8-truncation-panic.md  002-pending-p2-file-watcher-local-schemas.md  002-pending-p2-lsp-files-glob-filtering-ux.md  002-resolved-p2-extract-position-helper.md  003-pending-p2-resolved-document-factory-methods.md  003-pending-p2-schema-driven-completions.md  003-resolved-p2-combine-schema-cache-calls.md  004-pending-p2-hover-documentation.md  004-pending-p3-fallback-path-warning.md  004-ready-p3-synchronous-parse-completion-hotpath.md  004-resolved-p3-extract-schema-resolution.md  005-pending-p2-schema-field-span.md  005-pending-p3-strict-help-text.md  005-resolved-p3-structured-annotation-return.md  006-pending-p3-per-workspace-strict-mode.md  006-pending-p3-test-diagnostic-severity.md  (+3 more)
(+101 files in other folders)
