[package]
name = "jvl"
version = "0.0.0-dev"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
globset = "0.4"
ignore = "0.4"
jiff = "0.2"
jsonc-parser = { version = "0.29", features = ["serde"] }
jsonschema = "0.42"
miette = { version = "7", features = ["fancy"] }
owo-colors = { version = "4", features = ["supports-colors"] }
rayon = "1"
reqwest = { version = "0.13", features = ["blocking"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions", "filters"] }
tempfile = "3"
